--- a/project.ipynb
+++ b/project.ipynb
@@ -24,6 +24,15 @@
       "source": []
     },
     {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "BideS_phi6V5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# Emotion Recognition Project"
@@ -34,9 +43,82 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "# importing from my drive to git\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n",
+        "\n",
+        "%cd /content/drive/MyDrive\n",
+        "!git clone https://github.com/marius2347/emotion-recognition.git\n"
+      ],
+      "metadata": {
+        "id": "Z_hlKwKpbFtl",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0926243c-4d23-4da9-d5d6-96ed2e88705b"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n",
+            "/content/drive/MyDrive\n",
+            "Cloning into 'emotion-recognition'...\n",
+            "remote: Enumerating objects: 20, done.\u001b[K\n",
+            "remote: Counting objects: 100% (20/20), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (16/16), done.\u001b[K\n",
+            "remote: Total 20 (delta 1), reused 3 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
+            "Receiving objects: 100% (20/20), 7.68 KiB | 561.00 KiB/s, done.\n",
+            "Resolving deltas: 100% (1/1), done.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# new block"
+      ],
+      "metadata": {
+        "id": "L7Wlr6Cyi7Me"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "3 > 4"
+      ],
+      "metadata": {
+        "id": "Z22zVmVxmOxD",
+        "outputId": "d767d1dc-8379-4c99-d876-6fabe9564ef5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "Z_hlKwKpbFtl"
+        "id": "LzqRDbp5mKOp"
       },
       "execution_count": null,
       "outputs": []
