--- a/project.ipynb
+++ b/project.ipynb
@@ -116,9 +116,35 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "1 > 4"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LzqRDbp5mKOp",
+        "outputId": "8441869e-dbb1-4b29-80bd-7908ee8cb80e"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "LzqRDbp5mKOp"
+        "id": "MRogfcvBnNDy"
       },
       "execution_count": null,
       "outputs": []
