--- a/project.ipynb
+++ b/project.ipynb
@@ -15,24 +15,6 @@
   },
   "cells": [
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "qxY8MDkJa10x"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "BideS_phi6V5"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "# Emotion Recognition Project"
@@ -46,7 +28,7 @@
       "source": [
         "# importing from my drive to git\n",
         "from google.colab import drive\n",
-        "drive.mount('/content/drive')\n",
+        "drive.mount('/content/drive', force_remount=True)\n",
         "\n",
         "%cd /content/drive/MyDrive\n",
         "!git clone https://github.com/marius2347/emotion-recognition.git\n"
@@ -56,9 +38,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0926243c-4d23-4da9-d5d6-96ed2e88705b"
+        "outputId": "bf58d9f0-7d06-4d65-db0c-2a4c9c8216fb"
       },
-      "execution_count": 1,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -67,12 +49,11 @@
             "Mounted at /content/drive\n",
             "/content/drive/MyDrive\n",
             "Cloning into 'emotion-recognition'...\n",
-            "remote: Enumerating objects: 20, done.\u001b[K\n",
-            "remote: Counting objects: 100% (20/20), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (16/16), done.\u001b[K\n",
-            "remote: Total 20 (delta 1), reused 3 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
-            "Receiving objects: 100% (20/20), 7.68 KiB | 561.00 KiB/s, done.\n",
-            "Resolving deltas: 100% (1/1), done.\n"
+            "remote: Enumerating objects: 34081, done.\u001b[K\n",
+            "remote: Total 34081 (delta 0), reused 0 (delta 0), pack-reused 34081 (from 3)\u001b[K\n",
+            "Receiving objects: 100% (34081/34081), 57.65 MiB | 16.07 MiB/s, done.\n",
+            "Resolving deltas: 100% (4/4), done.\n",
+            "Updating files: 100% (35889/35889), done.\n"
           ]
         }
       ]
@@ -80,63 +61,23 @@
     {
       "cell_type": "code",
       "source": [
-        "# new block"
+        "print(\"hello\")"
       ],
       "metadata": {
-        "id": "L7Wlr6Cyi7Me"
-      },
-      "execution_count": 2,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "3 > 4"
-      ],
-      "metadata": {
+        "id": "voK7V2CAxkdQ",
+        "outputId": "ce1973e4-8c7d-4f48-8973-5ac9167f35cc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "Z22zVmVxmOxD",
-        "outputId": "d767d1dc-8379-4c99-d876-6fabe9564ef5"
-      },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "False"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 3
         }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "1 > 4"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "LzqRDbp5mKOp",
-        "outputId": "8441869e-dbb1-4b29-80bd-7908ee8cb80e"
       },
-      "execution_count": 4,
+      "execution_count": 8,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "False"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 4
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello\n"
+          ]
         }
       ]
     },
@@ -144,7 +85,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "MRogfcvBnNDy"
+        "id": "xyYmr7xDxlf9"
       },
       "execution_count": null,
       "outputs": []
