--- a/project.ipynb
+++ b/project.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "gpuType": "T4"
     },
     "kernelspec": {
       "name": "python3",
@@ -11,7 +12,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -26,7 +28,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# importing from my drive to git\n",
+        "# mounting the drive and importing from my drive to git\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive', force_remount=True)\n",
         "\n",
@@ -38,7 +40,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "52fa08c5-520b-4cee-8211-59af4a3d8d8e"
+        "outputId": "7b987977-9381-4da4-80f9-0cd94f1807bc"
       },
       "execution_count": 1,
       "outputs": [
@@ -72,7 +74,7 @@
       "metadata": {
         "id": "3wOB0daPtL6S"
       },
-      "execution_count": 9,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -97,9 +99,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KNQ-E1dTtSLB",
-        "outputId": "38a6690d-f84f-4390-daee-bf4e74739d0e"
+        "outputId": "2386356a-94a0-4325-d064-42edf97eb965"
       },
-      "execution_count": 10,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -122,9 +124,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JvtIGF2ssTUm",
-        "outputId": "1ee28ab5-01cf-4e94-ee79-5f9464b6830b"
+        "outputId": "2d055619-62b2-4c07-89e3-9d42f8be8b83"
       },
-      "execution_count": 11,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -166,9 +168,9 @@
           "height": 256
         },
         "id": "TrtX5fEHsciv",
-        "outputId": "ee60daf3-bb68-449a-e7c8-5fdac8c08310"
+        "outputId": "85d16444-8245-42b8-e002-578cd102d474"
       },
-      "execution_count": 13,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -184,7 +186,9 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "|"
+      ],
       "metadata": {
         "id": "mMwNgEDjuVTD"
       },
