--- a/project.ipynb
+++ b/project.ipynb
@@ -67,15 +67,60 @@
     {
       "cell_type": "code",
       "source": [
-        "import os\n",
+        "import os, random, math, time\n",
+        "from pathlib import Path\n",
+        "\n",
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import torch.optim as optim\n",
+        "from torch.utils.data import DataLoader, random_split, WeightedRandomSampler\n",
+        "from torchvision import datasets, transforms\n",
+        "from torchvision.models import resnet18, ResNet18_Weights\n",
+        "\n",
+        "import numpy as np\n",
+        "from sklearn.metrics import classification_report, confusion_matrix\n",
+        "import itertools\n",
         "import matplotlib.pyplot as plt\n",
-        "import matplotlib.image as mpimg"
+        "import matplotlib.image as mpimg\n",
+        "!nvidia-smi\n",
+        "!pip -q install torchmetrics==1.4.0 scikit-learn==1.5.1"
       ],
       "metadata": {
-        "id": "3wOB0daPtL6S"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3wOB0daPtL6S",
+        "outputId": "322b7af6-df8c-4b01-c437-155e68ff3a1f"
       },
-      "execution_count": 2,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Thu Aug 14 13:34:36 2025       \n",
+            "+-----------------------------------------------------------------------------------------+\n",
+            "| NVIDIA-SMI 550.54.15              Driver Version: 550.54.15      CUDA Version: 12.4     |\n",
+            "|-----------------------------------------+------------------------+----------------------+\n",
+            "| GPU  Name                 Persistence-M | Bus-Id          Disp.A | Volatile Uncorr. ECC |\n",
+            "| Fan  Temp   Perf          Pwr:Usage/Cap |           Memory-Usage | GPU-Util  Compute M. |\n",
+            "|                                         |                        |               MIG M. |\n",
+            "|=========================================+========================+======================|\n",
+            "|   0  Tesla T4                       Off |   00000000:00:04.0 Off |                    0 |\n",
+            "| N/A   43C    P8              9W /   70W |       0MiB /  15360MiB |      0%      Default |\n",
+            "|                                         |                        |                  N/A |\n",
+            "+-----------------------------------------+------------------------+----------------------+\n",
+            "                                                                                         \n",
+            "+-----------------------------------------------------------------------------------------+\n",
+            "| Processes:                                                                              |\n",
+            "|  GPU   GI   CI        PID   Type   Process name                              GPU Memory |\n",
+            "|        ID   ID                                                               Usage      |\n",
+            "|=========================================================================================|\n",
+            "|  No running processes found                                                             |\n",
+            "+-----------------------------------------------------------------------------------------+\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -91,23 +136,31 @@
       "source": [
         "# train path\n",
         "train_dir = '/content/drive/MyDrive/emotion-recognition/train'\n",
+        "test_dir = '/content/drive/MyDrive/emotion-recognition/test'\n",
+        "val_dir = ''\n",
         "os.chdir(train_dir)\n",
-        "print(f\"Current directory: {os.getcwd()}\")"
+        "print(f\"Current directory: {os.getcwd()}\")\n",
+        "print(\"Train exists:\", os.path.isdir(train_dir))\n",
+        "print(\"Val   exists:\", os.path.isdir(val_dir))\n",
+        "print(\"Test  exists:\", os.path.isdir(test_dir))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "KNQ-E1dTtSLB",
-        "outputId": "2386356a-94a0-4325-d064-42edf97eb965"
+        "outputId": "218f55cf-8a0d-4501-9f52-6594a8c80e21"
       },
-      "execution_count": 3,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Current directory: /content/drive/MyDrive/emotion-recognition/train\n"
+            "Current directory: /content/drive/MyDrive/emotion-recognition/train\n",
+            "Train exists: True\n",
+            "Val   exists: False\n",
+            "Test  exists: True\n"
           ]
         }
       ]
@@ -165,7 +218,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 256
+          "height": 162
         },
         "id": "TrtX5fEHsciv",
         "outputId": "85d16444-8245-42b8-e002-578cd102d474"
@@ -185,12 +238,54 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "|"
+        "# 3. Get ready for training"
       ],
       "metadata": {
-        "id": "mMwNgEDjuVTD"
+        "id": "tPlSVzuUycGn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# check for gpu and set a seed for reproductibility\n",
+        "def set_seed(seed=42):\n",
+        "    random.seed(seed)\n",
+        "    np.random.seed(seed)\n",
+        "    torch.manual_seed(seed)\n",
+        "    torch.cuda.manual_seed_all(seed)\n",
+        "set_seed(42)\n",
+        "\n",
+        "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+        "device"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mMwNgEDjuVTD",
+        "outputId": "771c66e5-6995-469c-b886-fcede214201d"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "device(type='cuda')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "lGQ7a-bxylio"
       },
       "execution_count": null,
       "outputs": []
